--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
   <h1>{{ page.title }}</h1>
